charts/grafana/02-istio-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grafana-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https-443
      protocol: HTTPS
    hosts:
    - grafana.teste.com.br
    tls:
      mode: SIMPLE # enables HTTPS on this port
      credentialName: grafana-cert-ingress # fetches certs from Kubernetes secret
